--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,20 @@ before_install:
 
 #tell travis to run the test suite. script section contains the series of steps that will be required to actually run the test suite. expects return code of zero, else it believes that the test suite has failed. 
 script:
-  - docker run ghoshanirba/docker-react npm run test -- --coverage
+# - docker run ghoshanirba/docker-react npm run test -- --coverage
+  - docker run -e CI=true ghoshanirba/docker-react npm run test
+    
+#the default behaviour of 'npm run test' is that after it executes once, it waits for the user to tell it what to do next, expects a user input and does not terminate automatically. but here we do not have the option to provide an input to 'npm run test' while executing test suites via travis. so we have to terminate the npm run test, otherwise if not terminated travis will think that the 'npm run test' has never executed and is hanging there forever. we need to add 'docker run -e CI=true [image name] npm run test' to end 'npm run test'. '-- --coverage' did not work.
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-west-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-875906036550"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
   
-#the default behaviour of 'npm run test' is that after it executes once, it waits for the user to tell it what to do next, expects a user input and does not terminate automatically. but here we do not have the option to provide an input to 'npm run test' while executing test suites via travis. so we have to terminate the npm run test, otherwise if not terminated travis will think that the 'npm run test' has never executed and is hanging there forever. we need to add '-- --coverage' to end npm run test.
